[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://Main/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
layer = -1
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -12.0
margin_right = 79.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agent" type="Button" parent="Background/VBoxContainer"]
margin_right = 34.0
margin_bottom = 25.0
text = "Agent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flask" type="Button" parent="Background/VBoxContainer"]
margin_left = 38.0
margin_right = 69.0
margin_bottom = 25.0
text = "Flask"

[node name="TimeTracker" type="Label" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -9.5
margin_right = 18.0
margin_bottom = 9.5
grow_horizontal = 2
text = "Time: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointTracker" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -9.5
margin_right = -10.0
margin_bottom = 9.5
grow_horizontal = 0
text = "Repute: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
